--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.17",
+        "tailwind-scrollbar": "^2.1.0-preview.0",
         "tailwindcss": "^3.1.8"
     }
 }
