--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "postcss": "^8.4.17",
         "tailwind-scrollbar": "^2.1.0-preview.0",
         "tailwindcss": "^3.1.8"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.14.2"
     }
 }
