--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.17",
         "tailwind-scrollbar": "^2.1.0-preview.0",
-        "tailwindcss": "^3.1.8"
+        "tailwindcss": "^3.1.8",
+        "webpack-notifier": "^1.15.0"
     },
     "dependencies": {
         "laravel-echo": "^1.14.2"
